# kie-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
src/: cli.rs  config.rs  lib.rs  main.rs  mcp.rs  media.rs
src/kie/: catalog.rs  client.rs  jobs.rs  mod.rs  normalize.rs
src/kie/catalog/: models.rs
tests/: catalog_contract.rs  kie_mock.rs  mcp_stdio.rs
tests/fixtures/: kie_catalog_contract.json
