[package]
name = "kie-mcp"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server for Kie.ai image and video generation"
license = "MIT"
repository = "https://github.com/Pym/kie-mcp"
readme = "README.md"
keywords = ["mcp", "kie", "image-generation", "video-generation"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
mime_guess = "2.0"
rmcp = { version = "2.0.0", features = ["server", "macros", "schemars", "transport-io"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "multipart", "query", "rustls"]

[dev-dependencies]
axum = "0.8"
tempfile = "3.14"
tokio = { version = "1.48", features = ["process"] }
